# IV-Code-Defender

./: AGENTS.md  CLAUDE.md  NOTICE  README.md  pyproject.toml
.claude/: settings.json
.codex/: config.toml
.github/workflows/: tests.yml
docs/: agent-sandbox.md  federal-deployment.md  identity-and-agent-access-policy.md  patching.md  pipeline.md  security.md  troubleshooting.md
harness/: README.md  agent.py  agent_image.py  artifacts.py  asan.py  auth.py  cli.py  compliance.py  config.py  dedup.py  docker_ops.py  find.py  grade.py  judge.py  novelty.py  patch.py  patch_grade.py  profiles.py  providers.py  recon.py  report.py  sandbox.py
harness/prompts/: __init__.py  find_prompt.py  grade_prompt.py  judge_prompt.py  patch_prompt.py  recon_prompt.py  report_grader_prompt.py  report_prompt.py  system_prompt.py  untrusted.py
scripts/: egress_proxy.py  setup_podman_sandbox.sh  setup_sandbox.sh
targets/: README.md
targets/alsa/: Dockerfile  config.yaml  entry.c
targets/canary/: Dockerfile  config.yaml  entry.c
targets/drlibs/: Dockerfile  config.yaml  entry.c
tests/: test_agent.py  test_agent_sandbox.py  test_artifacts.py  test_asan.py  test_auth.py  test_checkpoint.py  test_cli_auth.py  test_config.py  test_container_engine.py  test_dedup.py  test_egress_proxy.py  test_focus.py  test_found_bugs.py  test_grade.py  test_judge.py  test_patch.py  test_patch_grade.py  test_patch_grade_e2e.py  test_profiles.py  test_providers_compliance.py  test_report.py  test_sandbox.py  test_skill_checkpoint.py  test_system_prompt.py  test_untrusted.py  test_xml_parse.py
(+15 files in other folders)
